2011-11-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	configure: report perl version in config.log
	* configure.ac: Report the version of the selected perl interpreter
	in config.log; this should render the logs more informative.

2011-11-13  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure with older install-info
	* tests/install-info-dir.test (foo.texi): Also add proper
	`@settitle', `@dircategory' and `@direntry' directive, otherwise
	older versions of `install-info' (e.g., 4.8) will fail to create
	the `dir' index file in ${infodir}.
	Problem revealed by a failure on NetBSD 5.1.

2011-11-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	maintcheck: fix spurious failure in 'color2.test'
	* tests/color2.test: Avoid creative quoting to avoid a spurious
	failure of the `sc_tests_Exit_not_exit' maintainer check.

2011-11-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious error in 'uninstall-fail.test' on Solaris
	* tests/uninstall-fail.test: Solaris 10 /usr/xpg4/bin/sh can add
	a line number before the `:' in the error messages issued by shell
	builtins.  Account for that in our grepping of make output.

2011-11-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix typo in 'uninstall-fail.test'
	* tests/uninstall-fail.test: Always use `$rm_f_is_silent_on_error'
	instead of the bogus `$rm_f_is_silent_on_failure'.

2011-11-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: avoid a spurious failure of 'ltinit.test' MinGW
	* tests/ltinit.test: Be laxer in grepping configure output, to
	avoid spurious failures on systems which lack POSIX dynamic
	linking (e.g., MinGW), or when cross-compiling for such systems.
	See also commit `v1.11-855-ge9e5d4a'.
	Report and suggestion from Peter Rosin.

2011-11-08  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: testsuite is now safe to run with dmake in parallel mode
	* tests/defs.in: Unset variables DMAKE_CHILD, DMAKE_DEF_PRINTED