@@ -1,3 +1,12 @@
+2011-11-19  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	texinfo: work around Solaris 10 xpg4 shell bug in install rules
+	* lib/am/texinfos.am (install-html-am): Use an extra variable
+	indirection to work around a bug in Solaris 10 /usr/xpg4/bin/sh.
+	Bug revealed by a failure of `txinfo21.test'.  See also:
+	<http://lists.gnu.org/archive/html/bug-autoconf/2011-11/msg00005.html>
+	<http://debbugs.gnu.org/cgi/bugreport.cgi?bug=10026#23>
+
 2011-11-17  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	configure: report perl version in config.log
